The login page was way behind the bingo page cosmetically, ended up bringing those pages more into uniformity.  Fixed some overall layout issues, both desktop and mobile needed tweaking, fixed conflicts between those pages, added a spinner, removed some templated stuff.

--- a/ClientApp/src/components/BingoPage.css
+++ b/ClientApp/src/components/BingoPage.css
@@ -1,3 +1,41 @@
-section{
+/* section{
     margin: 10px 0 30px 0;
-}
+} */
+    .wider{ min-width:300px}
+    .form-group{color:#2e6e80 !important}
+      a { cursor: pointer; color: #2e6e80 !important}
+      .help-block { font-size: 12px; }
+      .blu-hu {
+        background: #2e6e80 !important;
+        color: #fff !important;
+        border-color: #337ab7;
+      }
+      .blu-hu:hover {
+        background: #105e5e !important;
+        color: #fff !important;
+        border-color: #337ab7;
+      }
+      .glyphicon-heart{
+        color:crimson;
+      }
+      .pointy{
+        cursor: pointer;
+      }
+      .m-one {
+        margin: 5px;
+        font-size: 18px;
+      }
+      .aqua{
+        background: #41b7b1;
+      }
+    .dope-gradient {
+        background: rgba(0, 0, 0, 0) linear-gradient(to right, rgb(67, 198, 172), rgb(25, 22, 84)) repeat scroll 0% 0%;
+    }
+      .current-number{
+        background:#076461;
+        color:white;
+        margin-bottom: 6px;
+      }
+      .menus{
+          font-size:15px;
+      }
